--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/tha-deepakrajput/Uber-Clone#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
